AC_INIT(src/gtkmm/main.cpp)
AM_INIT_AUTOMAKE(lostirc, 0.1.5pre)
AC_PROG_CXX
AC_PROG_INSTALL
AM_PROG_LIBTOOL
PKG_CHECK_MODULES(DEPS, gtkmm-2.0)
AC_SUBST(DEPS_CFLAGS)
AC_SUBST(DEPS_LIBS)

AC_CXX_HAVE_SSTREAM

# Add ./configure --enable-debug
AC_ARG_ENABLE(debug,
        [  --enable-debug           compile with debugging (for development)],
        debug=$enable_debug,
        debug=no
)
AC_MSG_CHECKING(for debugging)
if test "x$debug" = xyes; then
        AC_MSG_RESULT(yes)
        AC_DEFINE(DEBUG)
        CFLAGS="$CFLAGS -g -Wall"
        CXXFLAGS="$CXXFLAGS -g -Wall"
else
        AC_MSG_RESULT(no)
        CFLAGS="$CFLAGS -s -Wall"
        CXXFLAGS="$CXXFLAGS -s -Wall"
fi

AC_OUTPUT(lostirc.spec Makefile src/Makefile src/libirc/Makefile src/gtkmm/Makefile)
